[gd_scene load_steps=46 format=2]

[ext_resource path="res://assets/fonts/PressStart2P-vaV7_26pt.tres" type="DynamicFont" id=1]
[ext_resource path="res://SlowFruit/assets/Fruit/fruit6.png" type="Texture" id=5]
[ext_resource path="res://SlowFruit/assets/Fruit/fruit7.png" type="Texture" id=6]
[ext_resource path="res://SlowFruit/assets/Fruit/fruit8.png" type="Texture" id=7]
[ext_resource path="res://SlowFruit/assets/Fruit/fruit10.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://SlowFruit/assets/Fruit/FRUIT_NL_HL.png" type="Texture" id=12]
[ext_resource path="res://assets/fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://SlowFruit/Answer.gd" type="Script" id=14]
[ext_resource path="res://SlowFruit/FruitSpawner.gd" type="Script" id=15]
[ext_resource path="res://SlowFruit/assets/Sound/zapsplat_multimedia_alert_chime_short_musical_notification_end_complete_64921.mp3" type="AudioStream" id=16]
[ext_resource path="res://SlowFruit/assets/Sound/smartsound_ANIMAL_DOG_Dogo_Argentino_Whine_Complain_01.mp3" type="AudioStream" id=17]
[ext_resource path="res://SlowFruit/assets/Sound/winSoundDog.wav" type="AudioStream" id=18]
[ext_resource path="res://SlowFruit/assets/Sound/zapsplat_multimedia_alert_chime_short_musical_notification_007_64916.mp3" type="AudioStream" id=19]
[ext_resource path="res://SlowFruit/LoseLabel.gd" type="Script" id=20]
[ext_resource path="res://assets/fonts/PressStart2P-vaV7_90pt.tres" type="DynamicFont" id=22]
[ext_resource path="res://SlowFruit/WinLabel.gd" type="Script" id=23]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=24]
resource_local_to_scene = true
0/name = "FRUIT_NL_HL.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 160, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = true
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "FRUIT_NL_HL.png 1"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 15 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "FRUIT_NL_HL.png 2"
2/texture = ExtResource( 12 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 16 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "FRUIT_NL_HL.png 3"
3/texture = ExtResource( 12 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 17 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "FRUIT_NL_HL.png 4"
4/texture = ExtResource( 12 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 96, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 18 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "FRUIT_NL_HL.png 5"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 128, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 19 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "FRUIT_NL_HL.png 6"
6/texture = ExtResource( 12 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 32, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 20 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "FRUIT_NL_HL.png 7"
7/texture = ExtResource( 12 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 32, 32, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 21 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "FRUIT_NL_HL.png 8"
8/texture = ExtResource( 12 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 64, 32, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 22 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "FRUIT_NL_HL.png 9"
9/texture = ExtResource( 12 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 96, 32, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 23 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "FRUIT_NL_HL.png 10"
10/texture = ExtResource( 12 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 128, 32, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="DynamicFont" id=30]
size = 51
outline_size = 1
outline_color = Color( 0.0745098, 0.266667, 0.121569, 1 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=28]

[sub_resource type="DynamicFont" id=29]
size = 30
outline_size = 3
outline_color = Color( 0.00392157, 0, 0.027451, 1 )
font_data = ExtResource( 13 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 17.5, 19.125 )

[node name="FruitSpawner" type="Node2D" groups=["Fruit"]]
script = ExtResource( 15 )

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 24 )
show_collision = true
format = 1

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1900.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
margin_bottom = -125.0
size_flags_horizontal = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Node2D" parent="Control/Question"]

[node name="Label" type="Label" parent="Control/Question/Question"]
margin_top = 39.0
margin_right = 1920.0
margin_bottom = 153.0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.643137, 0.176471, 0.898039, 1 )
custom_colors/font_outline_modulate = Color( 0.0431373, 0.0470588, 0.0431373, 1 )
custom_colors/font_color_shadow = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 30 )
text = "Question that's super long liek what is the fasvosdkfjdfk sdflkjsdflkjsf sdflkjsdflks"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1Container" type="HBoxContainer" parent="Control"]
margin_left = 8.0
margin_top = 160.0
margin_right = 483.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1" type="Position2D" parent="Control/Answer1Container"]
position = Vector2( 216, 28 )
script = ExtResource( 14 )

[node name="Tween" type="Tween" parent="Control/Answer1Container/Answer1"]

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Answer1Container/Answer1"]
margin_left = -72.0
margin_top = 164.0
margin_right = 181.0
margin_bottom = 279.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 28 )
custom_colors/default_color = Color( 0.0627451, 0.662745, 0.0980392, 1 )
custom_colors/selection_color = Color( 0.101961, 0.478431, 0.356863, 1 )
custom_colors/font_color_selected = Color( 0.298039, 0.141176, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0.54902, 0.654902, 0.113725, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 29 )
text = "sdfsfdf"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RigidBody2D" type="RigidBody2D" parent="Control/Answer1Container"]
position = Vector2( 224, 104 )
collision_layer = 16
collision_mask = 0
gravity_scale = 0.0
can_sleep = false
__meta__ = {
"_edit_group_": true
}

[node name="Fruit1" type="Area2D" parent="Control/Answer1Container/RigidBody2D"]
position = Vector2( 0, 1 )
collision_layer = 8
collision_mask = 0
monitorable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Answer1Container/RigidBody2D/Fruit1"]
visible = false
position = Vector2( 24, 25 )
shape = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="Control/Answer1Container/RigidBody2D/Fruit1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Answer1Container/RigidBody2D"]
visible = false
position = Vector2( 24, 26 )
shape = SubResource( 25 )

[node name="Answer2Container" type="HBoxContainer" parent="Control"]
margin_left = 520.0
margin_top = 168.0
margin_right = 922.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Answer2" type="Position2D" parent="Control/Answer2Container"]
position = Vector2( 229, 28 )
script = ExtResource( 14 )

[node name="Tween" type="Tween" parent="Control/Answer2Container/Answer2"]

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Answer2Container/Answer2"]
margin_left = -165.0
margin_top = 78.0
margin_right = 244.0
margin_bottom = 250.0
theme = SubResource( 28 )
custom_colors/default_color = Color( 0.0627451, 0.662745, 0.0980392, 1 )
custom_colors/selection_color = Color( 0.101961, 0.478431, 0.356863, 1 )
custom_colors/font_color_selected = Color( 0.298039, 0.141176, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0.54902, 0.654902, 0.113725, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 29 )
text = "heyllo"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RigidBody2D" type="RigidBody2D" parent="Control/Answer2Container"]
collision_layer = 16
collision_mask = 0
gravity_scale = 0.0
can_sleep = false
__meta__ = {
"_edit_group_": true
}

[node name="Fruit2" type="Area2D" parent="Control/Answer2Container/RigidBody2D"]
position = Vector2( 192, 46 )
collision_layer = 8
collision_mask = 0
monitorable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Answer2Container/RigidBody2D/Fruit2"]
visible = false
shape = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="Control/Answer2Container/RigidBody2D/Fruit2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Answer2Container/RigidBody2D"]
visible = false
position = Vector2( 192, 46 )
shape = SubResource( 25 )

[node name="Answer3Container" type="HBoxContainer" parent="Control"]
margin_left = 976.0
margin_top = 128.0
margin_right = 1440.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Answer3" type="Position2D" parent="Control/Answer3Container"]
position = Vector2( 464, 152 )
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="Control/Answer3Container/Answer3"]

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Answer3Container/Answer3"]
margin_left = -328.0
margin_top = -71.0
margin_right = 120.0
margin_bottom = 99.0
theme = SubResource( 28 )
custom_colors/default_color = Color( 0.0627451, 0.662745, 0.0980392, 1 )
custom_colors/selection_color = Color( 0.101961, 0.478431, 0.356863, 1 )
custom_colors/font_color_selected = Color( 0.298039, 0.141176, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0.54902, 0.654902, 0.113725, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 29 )
text = "hullo"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RigidBody2D" type="RigidBody2D" parent="Control/Answer3Container"]
collision_layer = 16
collision_mask = 0
gravity_scale = 0.0
can_sleep = false
__meta__ = {
"_edit_group_": true
}

[node name="Fruit3" type="Area2D" parent="Control/Answer3Container/RigidBody2D"]
position = Vector2( 184, 0 )
collision_layer = 8
collision_mask = 0
monitorable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0

[node name="whereis" type="CollisionShape2D" parent="Control/Answer3Container/RigidBody2D/Fruit3"]
visible = false
position = Vector2( 32, 36 )
shape = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="Control/Answer3Container/RigidBody2D/Fruit3"]
position = Vector2( 32, 36 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Answer3Container/RigidBody2D"]
visible = false
position = Vector2( 216, 36 )
shape = SubResource( 25 )

[node name="Answer4Container" type="HBoxContainer" parent="Control"]
margin_left = 1408.0
margin_top = 120.0
margin_right = 1912.0
margin_bottom = 320.0
size_flags_horizontal = 5
size_flags_vertical = 5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Answer4" type="Position2D" parent="Control/Answer4Container"]
position = Vector2( 272, 120 )
script = ExtResource( 14 )

[node name="Tween" type="Tween" parent="Control/Answer4Container/Answer4"]

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Answer4Container/Answer4"]
margin_left = -144.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 208.0
size_flags_horizontal = 5
size_flags_vertical = 5
theme = SubResource( 28 )
custom_colors/default_color = Color( 0.0627451, 0.662745, 0.0980392, 1 )
custom_colors/selection_color = Color( 0.101961, 0.478431, 0.356863, 1 )
custom_colors/font_color_selected = Color( 0.298039, 0.141176, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0.54902, 0.654902, 0.113725, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 29 )
text = "yoyoyo"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RigidBody2D" type="RigidBody2D" parent="Control/Answer4Container"]
collision_layer = 16
collision_mask = 0
gravity_scale = 0.0
can_sleep = false
__meta__ = {
"_edit_group_": true
}

[node name="Fruit4" type="Area2D" parent="Control/Answer4Container/RigidBody2D"]
position = Vector2( 170, 46 )
collision_layer = 8
collision_mask = 8
monitorable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Answer4Container/RigidBody2D/Fruit4"]
visible = false
position = Vector2( 94, 19 )
shape = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="Control/Answer4Container/RigidBody2D/Fruit4"]
position = Vector2( 94, 18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Answer4Container/RigidBody2D"]
visible = false
position = Vector2( 264, 64 )
shape = SubResource( 25 )

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 2.0

[node name="DogWinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="dogSoundTimer" type="Timer" parent="DogWinSound"]
one_shot = true

[node name="DogLoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="dogSoundTimer2" type="Timer" parent="DogLoseSound"]
one_shot = true

[node name="ScoreLabel" type="RichTextLabel" parent="."]
margin_left = 1616.0
margin_top = 32.0
margin_right = 3176.0
margin_bottom = 584.0
size_flags_horizontal = 5
custom_colors/default_color = Color( 0.827451, 0.623529, 0.937255, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.054902, 0.643137, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/normal_font = ExtResource( 1 )
text = "Coins:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ScoreLabel"]

[node name="LoseLabelNode" type="Position2D" parent="."]
position = Vector2( 528, 280 )
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="LoseLabel" type="RichTextLabel" parent="LoseLabelNode"]
visible = false
margin_left = -272.0
margin_top = -44.0
margin_right = 1208.0
margin_bottom = 372.0
rect_clip_content = false
custom_colors/default_color = Color( 0.176471, 0.894118, 0.152941, 1 )
custom_colors/font_color_shadow = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
custom_constants/shadow_offset_x = 14
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 0
custom_fonts/normal_font = ExtResource( 22 )
bbcode_enabled = true
bbcode_text = " [wave amp=60 freq=15]Uh-oh!  [/wave]
 
  You picked a

      [rainbow freq=0.4 sat=1 val=1] [wave amp=80 freq=1][color=#256db2]SLOWFRUIT[/color][/wave]"
tab_size = 7
text = " Uh-oh!  
 
  You picked a

       SLOWFRUIT"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="LoseLabelNode/LoseLabel"]
wait_time = 7.0
one_shot = true

[node name="Tween" type="Tween" parent="LoseLabelNode"]

[node name="WinLabelNode" type="Position2D" parent="."]
position = Vector2( 536, 288 )
script = ExtResource( 23 )

[node name="Tween" type="Tween" parent="WinLabelNode"]

[node name="WinLabel" type="RichTextLabel" parent="WinLabelNode"]
visible = false
margin_left = -376.0
margin_top = 16.0
margin_right = 1616.0
margin_bottom = 640.0
rect_clip_content = false
custom_colors/default_color = Color( 0.623529, 0.0588235, 0.560784, 1 )
custom_colors/font_color_shadow = Color( 0.823529, 0.92549, 0.101961, 1 )
custom_fonts/normal_font = ExtResource( 22 )
bbcode_enabled = true
bbcode_text = "[rainbow freq=0.8 sat=1 val=1] [wave amp=90 freq=5][color=#256db2]Congratulations![/color][/wave][/rainbow]  
   on the 
     right fruit 
	    not the 
	     [fade start=1 length=6]Slowfruit[/fade] "
tab_size = 5
text = " Congratulations!  
   on the 
     right fruit 
	    not the 
	     Slowfruit "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="WinLabelNode/WinLabel"]
wait_time = 7.0
one_shot = true

[connection signal="body_entered" from="Control/Answer1Container/RigidBody2D/Fruit1" to="." method="_on_Fruit1_body_entered"]
[connection signal="body_entered" from="Control/Answer2Container/RigidBody2D/Fruit2" to="." method="_on_Fruit2_body_entered"]
[connection signal="body_entered" from="Control/Answer3Container/RigidBody2D/Fruit3" to="." method="_on_Fruit3_body_entered"]
[connection signal="body_entered" from="Control/Answer4Container/RigidBody2D/Fruit4" to="." method="_on_Fruit4_body_entered"]
[connection signal="timeout" from="LoseLabelNode/LoseLabel/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WinLabelNode/WinLabel/Timer" to="." method="_on_Timer_timeout"]
